# opspilot

./: .env.example  .gitignore  .gitlab-ci.backend.yml  .gitlab-ci.frontend.yml  .gitlab-ci.yml  Dockerfile.backend  Dockerfile.frontend  Makefile  PROGRESS.md  README.md  deploy.sh  diagnose-frontend.sh  docker-compose.prod.yml  docker-compose.salt.yml  docker-compose.yml  run-system-tests.sh  test-integration.sh
backend/: .gitignore  README.md  alembic.ini  basic_model_tests.py  comprehensive_model_tests.py  final_model_tests.py  final_test_runner.py  individual_model_tests.py  model_tests_direct.py  pyproject.toml  pytest.ini  run_model_tests.py  simple_model_tests.py  standalone_tests.py  targeted_tests.py  test_coverage.py  verify_tables.py
backend/alembic/: env.py
backend/alembic/versions/: 004_create_backup_schedules.py  005_create_backup_reports.py  006_create_commands.py  007_create_ssh_sessions.py  008_create_logs.py  009_create_deployments.py  010_create_deployment_executions.py  011_create_password_resets_table.py  012_create_security_scan_tables.py  013_installation_state.py  014_agent_metrics_push.py  015_server_ssh_credentials.py  016_add_salt_tables.py  017_add_salt_tables_basic.py  20260413_2142_d192139266e7_initial_schema.py  20260413_2143_20ada5292351_configure_timescale_hypertable.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py
backend/app/core/: agent_keys.py  config.py  database.py  email.py  exceptions.py  salt.py  security.py  ssh_credential_crypto.py  vault.py
backend/app/models/: __init__.py  alert.py  backup.py  base.py  credentials_vault_path.py  deployment.py  execution.py  installation_state.py  metrics.py  organization.py  password_reset.py  salt_event.py  salt_log.py  salt_minion.py  salt_package.py  salt_process.py  salt_service_state.py  security_scan.py  server.py  user.py  (+2 more)
backend/scripts/: verify_api.sh
backend/tests/: conftest.py
(+289 files in other folders)
